fixes alignment bugs in header and footer

--- a/src/assets/stylesheets/layout.css
+++ b/src/assets/stylesheets/layout.css
@@ -666,7 +666,7 @@
       grid-column-end: 4;
       padding: 0;
       display: grid;
-      grid-template-columns: repeat(12, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       grid-auto-rows: 1.5rem;
       grid-column-gap: 3rem;
     }
